# url_shortener

./: .env.example  .gitignore  Dockerfile  README.md  config.py  creat_slug.py  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  service.py
manual.txt/: docker_manual.txt  pytest_manual.txt  redis_manual.txt  sqlalchemi_manual.txt
migrations/: alembic_manual.txt  env.py
src/: cache.py  crud.py  db.py  models.py
test/: test_api.py  test_service.py
